--- a/src/main/resources/templates/portal/iv/survey/popup/vote.html
+++ b/src/main/resources/templates/portal/iv/survey/popup/vote.html
@@ -16,20 +16,25 @@
 	<div class="condition-area">
 		<table class="condition table-fixed">
 			<tr>
-				<td style="width:20%">[[${survey?.title}]]</td>
-				<td th:style="${#lists.isEmpty(survey?.uploadFileLists) ? 'display:none' : ''}">
-					[[#{HQP_L_ATTACHMENT}]] : <span th:each="uploadFileList : ${survey?.uploadFileLists}">
-						<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a>
-						(<span th:text="${uploadFileList.displayFileSize}"></span>)
+				<th style="width:20%;"><span th:text="#{HQP_L_SURVEY_TITLE}"></span></th>
+				<td><span th:text="${survey?.title}" /></td>
+			</tr>
+			<tr>
+				<th>설문취지</th>
+				<td><span th:text="${survey?.description}"/></td>
+			</tr>
+			<tr th:style="${#lists.isEmpty(survey?.uploadFileLists) ? 'display:none' : ''}">
+				<th>첨부파일</th>
+				<td>
+					<span th:each="uploadFileList : ${survey?.uploadFileLists}">
+					<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a>
+					(<span th:text="${uploadFileList.displayFileSize}"></span>)
 					</span>
 				</td>
 			</tr>
-			<tr>
-				<td colspan="2">[[${survey?.description}]]</td>
-			</tr>
 		</table>
 	<br/><br/>
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr th:each="voteItem, index : ${voteItems}">
 				<td th:switch="${voteItem.type}">
@@ -50,10 +55,10 @@
 								<table>
 									<tr th:each="item : ${voteItem.items}">
 										<td>
-											<span>
-												<input th:name="'Q_'+${voteItem.sqSeq}" th:value="${item.siSeq}" type="radio" /> 
-											</span>
-											<span>[[${item.title}]]</span>
+											<div class="input-area">
+												<input th:name="'Q_'+${voteItem.sqSeq}" th:value="${item.siSeq}" class="custom-ui" type="radio" />
+												<label th:text="${item.title}"></label>
+											</div>
 										</td>
 									</tr>
 								</table>
@@ -79,8 +84,10 @@
 								<table>
 									<tr th:each="item : ${voteItem.items}">
 										<td>
-											<span><input th:name="'Q_'+${voteItem.sqSeq}" th:value="${item.siSeq}" type="checkbox" /></span>
-											<span>[[${item.title}]]</span>
+											<div class="input-area">
+												<input th:name="'Q_'+${voteItem.sqSeq}" th:value="${item.siSeq}" type="checkbox" class="custom-ui" />
+												<label th:text="${item.title}"></label>
+											</div>
 										</td>
 									</tr>
 								</table>
@@ -105,7 +112,7 @@
 								<table>
 									<tr>
 										<td>
-											<textarea th:name="'Q_'+${voteItem.sqSeq}" th:id="'Q_'+${voteItem.sqSeq}" rows="5" cols="50"></textarea>
+											<textarea th:name="'Q_'+${voteItem.sqSeq}" th:id="'Q_'+${voteItem.sqSeq}" rows="5" cols="50" class="custom-ui"></textarea>
 										</td>
 									</tr>
 								</table>
@@ -132,17 +139,17 @@
 									<tr th:each="item : ${voteItem.items}">
 										<td>
 											<span>
-												<select th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}">
-													<option value="1">1[[#{HQP_L_POINT}]]</option>
-													<option value="2">2[[#{HQP_L_POINT}]]</option>
-													<option value="3">3[[#{HQP_L_POINT}]]</option>
-													<option value="4">4[[#{HQP_L_POINT}]]</option>
-													<option value="5">5[[#{HQP_L_POINT}]]</option>
-													<option value="6">6[[#{HQP_L_POINT}]]</option>
-													<option value="7">7[[#{HQP_L_POINT}]]</option>
-													<option value="8">8[[#{HQP_L_POINT}]]</option>
-													<option value="9">9[[#{HQP_L_POINT}]]</option>
-													<option value="10">10[[#{HQP_L_POINT}]]</option>
+												<select th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}" class="custom-ui" style="width:100px;">
+													<option value="1">1 [[#{HQP_L_POINT}]]</option>
+													<option value="2">2 [[#{HQP_L_POINT}]]</option>
+													<option value="3">3 [[#{HQP_L_POINT}]]</option>
+													<option value="4">4 [[#{HQP_L_POINT}]]</option>
+													<option value="5">5 [[#{HQP_L_POINT}]]</option>
+													<option value="6">6 [[#{HQP_L_POINT}]]</option>
+													<option value="7">7 [[#{HQP_L_POINT}]]</option>
+													<option value="8">8 [[#{HQP_L_POINT}]]</option>
+													<option value="9">9 [[#{HQP_L_POINT}]]</option>
+													<option value="10">10 [[#{HQP_L_POINT}]]</option>
 												</select>
 											</span>
 											<span>[[${item.title}]]</span>
@@ -171,7 +178,7 @@
 									<tr th:each="item : ${voteItem.items}">
 										<td>
 											<span>
-												<select th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}">
+												<select th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}" class="custom-ui" style="width:100px;">
 													<option th:each="idx, itemIndex : ${voteItem.items}" th:value="${itemIndex.count}">[[${itemIndex.count}]] [[#{HQP_L_PRIORITY_POINT}]]</option>
 												</select>
 											</span>
