--- a/src/main/resources/templates/portal/iv/survey/result/textAnswers.html
+++ b/src/main/resources/templates/portal/iv/survey/result/textAnswers.html
@@ -15,16 +15,21 @@
 	<div class="condition-area">
 		<table class="condition table-fixed">
 			<tr>
-				<td style="width:20%">[[${survey?.title}]]</td>
-				<td th:style="${#lists.isEmpty(survey?.uploadFileLists) ? 'display:none' : ''}">
-					[[#{HQP_L_ATTACHMENT}]] : <span th:each="uploadFileList : ${survey?.uploadFileLists}">
-						<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a>
-						(<span th:text="${uploadFileList.displayFileSize}"></span>)
-					</span>
-				</td>
+				<th style="width:20%;"><span th:text="#{HQP_L_SURVEY_TITLE}"></span></th>
+				<td><span th:text="${survey?.title}" /></td>
 			</tr>
 			<tr>
-				<td colspan="2">[[${survey?.description}]]</td>
+				<th>설문취지</th>
+				<td><span th:text="${survey?.description}"/></td>
+			</tr>
+			<tr th:style="${#lists.isEmpty(survey?.uploadFileLists) ? 'display:none' : ''}">
+				<th>첨부파일</th>
+				<td>
+					<span th:each="uploadFileList : ${survey?.uploadFileLists}">
+					<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a>
+					(<span th:text="${uploadFileList.displayFileSize}"></span>)
+					</span>
+				</td>
 			</tr>
 		</table>
 	<br/><br/>
