--- a/src/main/resources/templates/portal/iv/survey/write.html
+++ b/src/main/resources/templates/portal/iv/survey/write.html
@@ -24,13 +24,13 @@
 		<tbody>
 			<tr>
 				<th><span th:text="#{HQP_L_SURVEY_TITLE}"></span></th>
-				<td><input name="title" type="text" th:value="${survey?.title}"/></td>
+				<td><input type="text" name="title" id="title" class="custom-ui" autofocus="autofocus" th:value="${survey?.title}"/></td>
 			</tr>
 			
 			<tr>
 				<th><span th:text="#{HQP_L_SURVEY_PURPOSE}"></span></th>
 				<td>
-					<textarea name="description" th:text="${survey?.description}" rows="5" cols="50">
+					<textarea class="custom-ui" name="description" th:text="${survey?.description}" rows="5" cols="50">
 					</textarea>
 				</td>
 			</tr>
@@ -39,7 +39,7 @@
 				<th><span th:text="#{HQP_L_SURVEY_TARGET}"></span></th>
 				<td>
 					<div class="split-row-more-compact"></div>
-					<div class="input-area"><input type="text" id="searchVisibleTarget" name="searchVisibleTarget" class="custom-ui" /></div>
+					<div class="input-area"><input type="text" id="searchVisibleTarget" name="searchVisibleTarget" class="custom-ui" th:placeholder="#{HQP_L_PLACEHOLD_DEALER_CODE_NAME}"/></div>
 					<div class="split-row-more-compact"></div>
 					<button id="BTN_deleteVisibleTarget" type="button" th:text="#{HQP_B_DELETE}" class="small_button"></button>
 					<div class="split-row-more-compact"></div>
@@ -61,38 +61,32 @@
 				<td>
 					<div th:with="validFrom=${survey?.validFrom}, validFromDate=${#strings.substring(validFrom, 0, 8)}" class="input-area period">
 						<span th:text="#{HQP_L_FROM}" class="label"></span>
-						<input type="text" id="validFromDate" name="validFromDate" class="custom-ui-calendar" 
-							th:value="${validFromDate}"/>
+						<input type="text" id="validFromDate" name="validFromDate" class="custom-ui-calendar" th:value="${validFromDate}"/>
 						<div class="split3"></div>
 						<select id="validFromHours" name="validFromHours" class="custom-ui hours">
 							<option value=""></option>
-							<option th:each="num : ${#numbers.sequence(0,23)}" th:with="num=${#numbers.formatInteger(num, 2)}" 
-								th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validFrom, 8, 10)}"/>
+							<option th:each="num : ${#numbers.sequence(0,23)}" th:with="num=${#numbers.formatInteger(num, 2)}" th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validFrom, 8, 10)}"/>
 						</select>
 						<span th:text="#{HQP_L_HOURS}"></span>
 						<select id="validFromMinutes" name="validFromMinutes" class="custom-ui minutes">
 							<option value=""></option>
-							<option th:each="num : ${#numbers.sequence(0,59)}" th:with="num=${#numbers.formatInteger(num, 2)}" 
-								th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validFrom, 10, 12)}"/>
+							<option th:each="num : ${#numbers.sequence(0,59)}" th:with="num=${#numbers.formatInteger(num, 2)}" th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validFrom, 10, 12)}"/>
 						</select>
 						<span th:text="#{HQP_L_MINUTES}"></span>
 					</div>
 					
 					<div th:with="validTo=${survey?.validTo}" class="period">
 						<span th:text="#{HQP_L_TO}" class="label"></span>
-						<input type="text" id="validToDate" name="validToDate" class="custom-ui-calendar" 
-							th:value="${#strings.substring(validTo, 0, 8)}"/>
+						<input type="text" id="validToDate" name="validToDate" class="custom-ui-calendar" th:value="${#strings.substring(validTo, 0, 8)}"/>
 						<div class="split3"></div>
 						<select id="validToHours" name="validToHours" class="custom-ui hours">
 							<option value=""></option>
-							<option th:each="num : ${#numbers.sequence(0,23)}" th:with="num=${#numbers.formatInteger(num, 2)}" 
-								th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validTo, 8, 10)}"/>
+							<option th:each="num : ${#numbers.sequence(0,23)}" th:with="num=${#numbers.formatInteger(num, 2)}" th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validTo, 8, 10)}"/>
 						</select>
 						<span th:text="#{HQP_L_HOURS}"></span>
 						<select id="validToMinutes" name="validToMinutes" class="custom-ui minutes">
 							<option value=""></option>
-							<option th:each="num : ${#numbers.sequence(0,59)}" th:with="num=${#numbers.formatInteger(num, 2)}" 
-								th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validTo, 10, 12)}"/>
+							<option th:each="num : ${#numbers.sequence(0,59)}" th:with="num=${#numbers.formatInteger(num, 2)}" th:value="${num}" th:text="${num}" th:selected="${num eq #strings.substring(validTo, 10, 12)}"/>
 						</select>
 						<span th:text="#{HQP_L_MINUTES}"></span>			
 					</div>
@@ -124,7 +118,7 @@
 			<tr>
 				<th><span th:text="#{HQP_L_THANKS_GREETING}"></span></th>
 				<td>
-					<textarea name="remark" th:text="${survey?.remark}" rows="5" cols="50">
+					<textarea class="custom-ui" name="remark" th:text="${survey?.remark}" rows="5" cols="50">
 					</textarea>
 				</td>
 			</tr>
@@ -165,6 +159,8 @@ $(function(){
 	
 	$("#BTN_save").on("click", function() {
 		// to-do: validation
+		
+		
 		
 		let validFromDate = $("#validFromDate").val().replaceAll('.', '');
 		let validFromHours = $("#validFromHours").val();
