--- a/src/main/resources/templates/portal/iv/survey/popup/view.html
+++ b/src/main/resources/templates/portal/iv/survey/popup/view.html
@@ -200,6 +200,10 @@
 <script th:inline="javascript">
 $(function(){
 	ProgressBar.hide();
+	
+	$("a[downloadKey]").on("click", function() {					
+		PortalFileDownload.download($(this).attr("downloadKey"));
+	});	
 });
 
 </script>
