--- a/src/main/resources/templates/portal/iv/sso/sso.html
+++ b/src/main/resources/templates/portal/iv/sso/sso.html
@@ -26,7 +26,7 @@
 		vertical-align: middle;
 	}
 	
-	.guide-go-gpes {
+	.guide-go-to {
 		margin-top: 20px; font-weight:bold;
 	}
 </style>
@@ -34,17 +34,18 @@
 	<div style="margin-top:138px;">
 		<img src="/portal/img/popup/confirm.png" />
 	</div>
-	<div class="guide-go-gpes" th:text="#{PTL_T_MOVE_TO_GPES}"></div>
-	<div class="guide-go-gpes" th:text="#{PTL_T_GUIDE_MOVE_TO_GPES_MANUALLY}"></div>
+	<div class="guide-go-to" th:text="#{PTL_T_MOVE_TO_SYSTEM}"></div>
+	<div class="guide-go-to" th:text="#{PTL_T_GUIDE_MOVE_TO_SYSTEM_MANUALLY}"></div>
 	<div style="width:auto; height:220px; background-color: #f9f9f9; margin: 40px 40px 0 40px;">
 		<div style="height: 30px;"></div>
-		<button id="BTN_goGpes" class="gomain-button"><span th:text="#{PTL_B_GO_GPES}"></span> <img src="/portal/img/common/arrow_right.png" /></button>
+		<button id="BTN_go" class="gomain-button"><span th:text="#{PTL_B_MOVE_TO_SYSTEM}"></span> <img src="/portal/img/common/arrow_right.png" /></button>
 	</div>
 </div>
 <script>
-let url = "http://gpes.doosan-iv.com/ssoextra/sso_login_div_order.jsp?p_encryptsso=[[${key}]]";
+//let url = "http://gpes.doosan-iv.com/ssoextra/sso_login_div_order.jsp?p_encryptsso=[[${key}]]";
+let url = "[[${url}]]";
 
-$("#BTN_goGpes").on("click", function() {
+$("#BTN_go").on("click", function() {
 	window.open(url);
 });
 
