딜러맵핑정보변경 기능 개발

--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
@@ -103,7 +103,7 @@ $(document).ajaxSend(function(event, jqXHR, ajaxOptions) {
 
  function _clickDealerInfo()
  {
- 	Popup.open("[[${BASE_PATH}]]/dealer_info/view", 1100, 800);
+ 	Popup.open("/portal/iv/hq/parts/domestic/dealer_info/view", 1100, 800);
  };
 
  function _clickLogout()
